# parquet-tools

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/repository_metadata/: gh_repo.yml
.github/workflows/: post-pull-request.yml
docs/: BRANCH_STRATEGY.md  VERSIONING_POLICY.md  testing.md
docs/guidelines/: schema-guide.md
docs/guidlines/: schema-guide.md
docs/lintrules/: markdownlint.md
src/parquet_tools/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py
